cluster/apps/kyverno/policies/ingress-annotations.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ingress-annotations
  annotations:
    policies.kyverno.io/title: Ingress annotations
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      This policy creates annotations on ingresses for external-dns,
      cert-manager and authentication based on custom annotations.
spec:
  mutateExistingOnPolicyUpdate: true
  generateExistingOnPolicyUpdate: true
  rules:
    - name: external-dns
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                external-dns.home.arpa/enabled: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(external-dns.alpha.kubernetes.io/target): ${DOMAIN}
    - name: cert-manager
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                cert-manager.home.arpa/enabled: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(cert-manager.io/cluster-issuer): letsencrypt-production
    - name: auth
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                auth.home.arpa/enabled: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(nginx.ingress.kubernetes.io/auth-url): |-
                https://auth.${DOMAIN}/oauth2/auth
              +(nginx.ingress.kubernetes.io/auth-signin): |-
                https://auth.${DOMAIN}/oauth2/start
